# hrrr-smoke-vis

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: feature_request.md
dev-proxy/: proxy.conf
helm/: Chart.yaml
helm/templates/: install.yaml
helm/values/: external.yaml
notebooks/: 00 Data Exploration.ipynb  02 XSection.ipynb  03 GRIB Processing.ipynb  04 Vertically Integrated Smoke.ipynb  Dockerfile
services/api/: pyproject.toml
services/api/src/hrrr_smoke/: __init__.py  cli.py  hrrr.py  routes.py
services/backend/xsection/: XSection.py
services/frontend/: .dockerignore  .eslintrc.json  Dockerfile  Makefile  README.md  nodemon.json  package-lock.json  package.json  rollup.config.js
services/frontend/cypress/integration/: home_spec.js
services/frontend/public/: index.html
services/frontend/scripts/: prerender.js
services/frontend/src/: App.svelte  api.js  app.html  index.html  main.js  server.js  serviceworker.js  stores.js  utils.js
services/frontend/src/components/: Axis.svelte  AxisBottom.svelte  AxisLeft.svelte  Branding.svelte  Contour.svelte  CoordinateInput.svelte  Footer.svelte  Header.svelte  HrrrControls.svelte  HrrrMap.js  HrrrMap.svelte  Legend.svelte  Loading.svelte  NameForm.svelte  XSection.svelte
services/frontend/src/helpers/: units.helpers.js
services/frontend/static/: manifest.json  serviceworker.js
services/xsection/: Dockerfile  app.py  entrypoint.sh  pyproject.toml  requirements.txt
services/xsection/src/hrrr_smoke/: __init__.py  cli.py  hrrr.py  routes.py  wsgi.py
(+32 files in other folders)
