[tool.poetry]
name = "hrrr_smoke"
version = "0.1.0"
description = ""
authors = ["W. Evan Sheehan <evan.sheehan@noaa.gov>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
flask = "*"
MetPy = "1.1.0"
numpy = "^1.21.4"
pyproj = "^3.2.1"
s3fs = "*"
xarray = "^0.20.1"
zarr = "2.10.2"
pygrib = "^2.1.4"
Cartopy = "^0.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
